First build that works with Jetson TX-2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_policy(SET CMP0015 OLD)
 
 project (track_targets)
 
+find_package(wpilib REQUIRED)
 find_package(OpenCV REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
@@ -10,9 +11,9 @@ include_directories("libs/cscore/include")
 include_directories("libs/ntcore/include")
 include_directories("libs/wpiutil/include")
 
-link_directories("/home/ubuntu/projects/github/teamblitz/Jetson_TK1_2017/libs/cscore/Linux/arm")
-link_directories("/home/ubuntu/projects/github/teamblitz/Jetson_TK1_2017/libs/ntcore/Linux/arm")
-link_directories("/home/ubuntu/projects/github/teamblitz/Jetson_TK1_2017/libs/wpiutil/Linux/arm")
+#link_directories("/home/ubuntu/projects/github/teamblitz/Jetson_TX2_2018/libs/cscore/Linux/arm")
+#link_directories("/home/ubuntu/projects/github/teamblitz/Jetson_TX2_2018/libs/ntcore/Linux/arm")
+#link_directories("/home/ubuntu/projects/github/teamblitz/Jetson_TX2_2018/libs/wpiutil/Linux/arm")
 
 add_definitions(-std=c++11)
 
